# SAMurai

./: README.md  pyproject.toml  scraper.ipynb
docs/: dataset.md  inference.md  model.md
sam_classifier/: logger.py
sam_classifier/data/cleaning/: cleaner.py  helpers.py
sam_classifier/data/mining/: api.py  archives.py  label.py  main.py  utils.py  web_scraper.py
sam_classifier/data/preprocessing/: categorical.py  main.py  nlp.py  preprocess.py
sam_classifier/files/: dates.txt  labels.txt
sam_classifier/model/: nb.py
sam_classifier/pipeline/: main.py  pipe.py
samurai/data/cleaning/: cleaner.py  helpers.py
samurai/data/mining/: api.py  archives.py  label.py  main.py  pdf_scraper.py  web_scraper.py
samurai/data/preprocessing/: main.py  nlp.py  preprocess.py  utils.py
samurai/files/: dates.txt  filters.txt
samurai/model/: nb.py
samurai/pipeline/: main.py  pipe.py  pipe_helpers.py
