[tool.poetry]
name = "SAMurai"
version = "0.1.0"
description = ""
authors = ["Thai Villaluna <thaivillaluna@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
requests = "^2.32.3"
bs4 = "^0.0.2"
pandas = "^2.2.2"
numpy = "^2.0.1"
httpx = "^0.27.0"
scikit-learn = "^1.5.1"
pymupdf = "^1.24.9"
tika = "^2.6.0"
lxml = "^5.2.2"
selenium = "^4.23.1"
nltk = "^3.8.1"
unidecode = "^1.3.8"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
